<resources>
    <string name="app_name">NoteApp</string>
    <string name="no_internet">No internet connection</string>
    <string name="create_note">Create a note!</string>
    <string name="save">Save</string>
    <string name="title">Note title</string>
    <string name="img_url">Image url (optional)</string>
    <string name="details">Description</string>
    <string name="updated">edited</string>
    <string name="delete">Delete</string>
</resources>