<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NoteActivity">

    <include layout="@layout/ui_internet_monitor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/textSize16sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etImg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/img_url"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/textSize16sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/details"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            android:maxLines="2"
            android:textSize="@dimen/textSize16sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@drawable/bg_rectangle_filled"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>